tests/NormalTests/paczka1/small_fuzzy/30875669.err
Error in line 3: 1ca5GR7sug A684 24,3
Error in line 12: r85eL A684 14,46
